# text2cypher

./: .example_env  .gitignore  .gitmodules  Dockerfile  Evaluation.ipynb  LICENSE  Playground.ipynb  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ui.py
evaluation_results/: All_0_Step_History_with_decision.csv  All_Database_Decisions.csv  All_One_Step_History_Decisions.csv  All_Three_Step_History_with_Decisions.csv  All_Two_Step_History_with_Decisions.csv  Clevr_Generation_0_shot_with_timeout_error_with_evaluation.csv  Clevr_Generation_few_shot_with_timeout_error_with_evaluation.csv
scripts/: CypherScript_XAI4Wind.txt  InitializeData.py  backup_neo4j.py
scripts/clevr/: create_graph.py
scripts/clevr/clevr-graph/gqa/: args.py  functional.py  generate.py  generate_graph.py  list_questions.py  london_graph.py  questions.py  types.py
scripts/clevr/clevr-graph/gql/: __init__.py  gql_builder.py  graph_builder.py  load.py
scripts/movie/: create_graph.py
src/llm_query_generator/: chat_history.py
src/llm_query_generator/db/: __init__.py  base.py  neo4j.py
src/llm_query_generator/llm/: __init__.py  base.py  open_ai_model.py
src/llm_query_generator/pipelines/: __init__.py  agent_pipeline.py  base.py  chat_from_history_pipeline.py  chat_pipeline.py  qa_pipeline.py
tests/: test_chat_history.py  test_neo4j_adapter.py  test_openai_adapter.py  test_qa_pipeline.py
